[gd_scene load_steps=10 format=3 uid="uid://bqril3qd36dv4"]

[ext_resource type="Texture2D" uid="uid://drcle0b2yu1e4" path="res://Player/Transformation_anim.png" id="1_1qr21"]
[ext_resource type="Script" uid="uid://co0xj73eyskns" path="res://Player/werewolf.gd" id="1_uiv21"]

[sub_resource type="SpriteFrames" id="SpriteFrames_uiv21"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_1qr21")
}, {
"duration": 1.0,
"texture": ExtResource("1_1qr21")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_1qr21")
}, {
"duration": 1.0,
"texture": ExtResource("1_1qr21")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_uiv21"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_g4ruo"]
resource_name = "run"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_q50x0"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.54),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q50x0"]
_data = {
&"RESET": SubResource("Animation_uiv21"),
&"death": SubResource("Animation_q50x0"),
&"run": SubResource("Animation_g4ruo")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g4ruo"]
radius = 7.0
height = 26.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q50x0"]
radius = 11.0
height = 32.0

[node name="Werewolf" type="CharacterBody2D" node_paths=PackedStringArray("direction_sprite") groups=["witch"]]
collision_layer = 2
collision_mask = 45
script = ExtResource("1_uiv21")
max_hp = 8
direction_sprite = NodePath("AnimatedSprite2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_uiv21")
animation = &"death"
autoplay = "run"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_q50x0")
}
autoplay = "run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_g4ruo")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 45

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CapsuleShape2D_q50x0")

[node name="InvTimer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="InvTimer" to="." method="_on_inv_timer_timeout"]
